rust/ja4/src/snapshots/ja4__insta@socks4-https.pcap.snap
---
source: ja4/src/lib.rs
expression: output
---
- stream: 0
  transport: tcp
  src: 10.0.0.1
  dst: 10.0.0.2
  src_port: 50606
  dst_port: 9901
  ja4t: 8192_2-1-3-1-1-4_1360_2
  ja4l_c: 119349_126
  ja4l_s: 40155_52
