rust/ja4/src/snapshots/ja4__insta@ssh-scp-1050.pcap.snap
---
source: ja4/src/lib.rs
expression: output
---
- stream: 0
  transport: tcp
  src: 192.168.1.169
  dst: 192.168.1.197
  src_port: 49237
  dst_port: 22
  ja4l_c: 179_128
  ja4l_s: 38_64
  ja4ssh:
  - c112s80_c52s107_c35s4
  - c0s1460_c0s174_c26s0
  - c112s1460_c13s150_c37s0
  - c0s1460_c0s178_c22s0
  - c0s1460_c0s179_c21s0
  ssh_extras:
    hassh: eb6d4c713c7dcaba7cfd070b095213a9
    hassh_server: 6832f1ce43d4397c2c0a3e2f8c94334e
    ssh_protocol_client: SSH-2.0-WinSCP_release_5.17.10
    ssh_protocol_server: SSH-2.0-OpenSSH_7.4
    encryption_algorithm: chacha20-poly1305@openssh.com

